src/objects/Cat__c.object
<CustomObject>
    <fields>
        <fullName>Cat_Breed__c</fullName>
        <label>Cat Breed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cat_Breed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test1__c</fullName>
        <label>test1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_double__c</fullName>
        <label>test_double</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cat</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cats</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>